<resources>
    <string name="app_name">Amateur Shipper</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiYWhpaGljaG9kYW5na3lkaSIsImEiOiJjbDEzMWM2OWkwMmc0M2pteHplaTF6M2JiIn0.8xXhkSM_dVoqpg5glm0QBw</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="facebook_app_id">2865594403685779</string>
    <string name="fb_login_protocol_scheme">fb2865594403685779</string>


    <string name="get_otp">Get OTP</string>
    <string name="we_will_send_you_an_one_time_password_one_this_phone_number">We will send you an One time password one this phone number</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="otp_verification">OTP verification</string>

    <string name="enter_the_otp_send_to">Enter the OTP send to</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the otp</string>
    <string name="verify">Verify</string>
    <string name="phone_number">Phone number</string>
    <string name="new_credentials">NEW CREDENTIALS</string>
    <string name="new_password">New Password</string>
    <string name="password">Password</string>
    <string name="repassword">Repassword</string>
    <string name="map_key">AIzaSyC05W7QJSFuCLGwsQVYp6O0-vBfgH3fDTE</string>
    <string name="already_registered_sign_in">Already registered? Sign in.</string>

    <string name="successful_but_no_routes">successful but no routes</string>
    <string name="no_success">no success</string>
    <string name="null_in_response">null in response</string>
    <string name="only_twelve_stops_allowed">only twelve stops allowed</string>
    <string name="location_picker_place_name_result">location picker place name réult</string>
    <string name="new_location">new location</string>
    <string name="user_location_permission_explanation">user location permission explanation</string>
    <string name="user_location_permission_not_granted">user location permission not granted</string>
    <string name="accept_rule">Bạn chưa đồng ý với điều khoản của chúng tôi.</string>

    <string name="disconnect">Thiết bị mất kết nối Internet</string>
    <string name="titleReasonDelete">Tại sao bạn muốn hủy đơn này?</string>
    <string name="setting">Cài đăt</string>
    <string name="privacy">Quyền riêng tư</string>
    <string name="manage_account">Quản lý tài khoản</string>
    <string name="infor_account">Thông tin tài khoản</string>
    <string name="infor_phone_number">Số điện thoại</string>
    <string name="infor_email">Email</string>
    <string name="infor_password">Mật khẩu</string>

    <string name="titleReport">Báo cáo vấn đề</string>
    <string name="contentReport1">Lừa đảo</string>
    <string name="contentReport2">Thông tin sai sự thật</string>
    <string name="contentReport3">Bán hàng trái phép</string>
    <string name="contentReport4">Ngôn từ gây thù ghét</string>
    <string name="contentReport5">Quấy rối</string>
    <string name="contentReport6">Bạo lực</string>
    <string name="contentReport7">Vấn đề khác</string>
    <string name="qu_n_m_t_kh_u">QUÊN MẬT KHẨU.</string>


</resources>