<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/report_frame"
    android:background="@color/white"
    tools:context=".Fragment.ReportFragment">

    <ScrollView
        android:id="@+id/layout_manage_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rellay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp">

                <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/cancel"
                    />
<!--                    android:background="@drawable/mapbox_ic_arrow_back"/>-->
                <TextView
                    android:id="@+id/text_sua_ho_so"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titleReport"
                    android:textSize="20sp"
                    android:textColor="@color/colorText"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp" />
                <View
                    android:layout_width="100dp"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/half_black"
                    android:layout_below="@+id/text_sua_ho_so"
                    android:layout_centerHorizontal="true"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hãy chọn vấn đề"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/colorText"
                    android:textStyle="bold"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_1"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical">
                        <TextView
                            android:id="@+id/tv_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:layout_marginLeft="10dp"
                            android:text="@string/contentReport1"
                            android:textColor="@color/colorText"
                            android:fontFamily="sans-serif-light"
                            android:textSize="15sp"/>
                        <TextView
                            android:id="@+id/phone_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:textColor="@color/colorText"
                            android:fontFamily="sans-serif-light"
                            android:textSize="15sp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical">
                        <TextView
                            android:id="@+id/tv_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:layout_marginLeft="10dp"
                            android:text="@string/contentReport2"
                            android:textColor="@color/colorText"
                            android:fontFamily="sans-serif-light"
                            android:textSize="15sp"/>
                        <TextView
                            android:id="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:textColor="@color/colorText"
                            android:fontFamily="sans-serif-light"
                            android:textSize="15sp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_3"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical">
                        <TextView
                            android:id="@+id/tv_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:text="@string/contentReport3"
                            android:textColor="@color/colorText"
                            android:fontFamily="sans-serif-light"
                            android:textSize="15sp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_4"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical">
                        <TextView
                            android:id="@+id/tv_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:text="@string/contentReport4"
                            android:textColor="@color/colorText"
                            android:fontFamily="sans-serif-light"
                            android:textSize="15sp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_5"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical">
                        <TextView
                            android:id="@+id/tv_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:text="@string/contentReport5"
                            android:textColor="@color/colorText"
                            android:fontFamily="sans-serif-light"
                            android:textSize="15sp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_6"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical">
                        <TextView
                            android:id="@+id/tv_6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:text="@string/contentReport6"
                            android:textColor="@color/colorText"
                            android:fontFamily="sans-serif-light"
                            android:textSize="15sp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_7"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical">
                        <TextView
                            android:id="@+id/tv_7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:text="@string/contentReport7"
                            android:textColor="@color/colorText"
                            android:fontFamily="sans-serif-light"
                            android:textSize="15sp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</FrameLayout>