<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".Activity.InputNewPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="5dp"
            android:src="@drawable/ic_baseline_close_24"
            android:tint="@color/black" />
        <ImageView
            android:id="@+id/set_new_password_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/update_new_password_icon" />
        <TextView
            android:id="@+id/set_new_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/muli_black"
            android:gravity="center"
            android:text="@string/new_credentials"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/cTextSecondary"
            android:textSize="31sp" />


        <TextView
            android:id="@+id/set_new_password_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli"
            android:gravity="center"
            android:text="You identity has been verified!Set your new passworfd"
            android:textAlignment="center"
            android:textColor="@color/cTextSecondary"
            android:textAllCaps="true"
            android:textSize="19sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                style="@style/parent"
                android:backgroundTint="@color/background1"
                app:startIconDrawable="@drawable/padlock"
                android:layout_marginTop="@dimen/loginViewsMargin"
                app:boxStrokeWidthFocused="2dp"
                android:hint="@string/password"
                >
                <EditText
                    android:id="@+id/editTextPassword"
                    style="@style/modifiedEditText1"
                    android:background="@color/white_pressed"
                    android:clickable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/LayoutRePassword"
                style="@style/parent"
                app:startIconDrawable="@drawable/padlock"
                android:layout_marginTop="@dimen/loginViewsMargin"
                app:boxStrokeWidthFocused="2dp"
                android:hint="@string/repassword"
                android:clickable="true">
                <EditText
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:clickable="true"
                    android:background="@color/white_pressed"
                    android:id="@+id/editTextRePassword"
                    style="@style/modifiedEditText1"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
                    <Button
                        android:id="@+id/set_new_password_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textInputPassword"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/white_pressed"
                        android:background="@drawable/backgournd_button"
                        android:text="Update" />
                   </LinearLayout>


                    </ScrollView>